# bitflag-attr

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
.github/workflows/: check.yml  docs.yml  fmt.yml
bitflag_attr/: all.html  attr.bitflag.html  index.html  macro.bitflag_match!.html  macro.bitflag_match.html  sidebar-items.js  trait.BitsPrimitive.html  trait.Flags.html
bitflag_attr/example_generated/: index.html  sidebar-items.js  struct.ExampleFlags.html
bitflag_attr/iter/: index.html  struct.Iter.html  struct.IterNames.html
bitflag_attr/parser/: fn.from_text.html  fn.from_text_strict.html  fn.from_text_truncate.html  fn.to_writer.html  fn.to_writer_strict.html  fn.to_writer_truncate.html  index.html  sidebar-items.js  struct.ParseError.html  trait.ParseHex.html
bitflags-attr-macros/: Cargo.toml
bitflags-attr-macros/src/: lib.rs  typed.rs
bitflags_attr_macros/: all.html  attr.bitflag.html  index.html  sidebar-items.js
examples/: iter.rs  no_debug.rs  readme.rs  serde.rs  simple.rs
proc_macro2/: all.html  enum.Delimiter.html  enum.Spacing.html  enum.TokenTree.html  index.html  struct.Group.html  struct.Ident.html  struct.LexError.html  struct.Literal.html  struct.Punct.html  struct.Span.html  struct.TokenStream.html
proc_macro2/extra/: index.html  struct.DelimSpan.html
proc_macro2/token_stream/: index.html  struct.IntoIter.html
quote/: all.html  index.html  macro.format_ident.html  macro.quote.html  macro.quote_spanned.html  trait.IdentFragment.html  trait.ToTokens.html  trait.TokenStreamExt.html
search.desc/bitflag_attr/: bitflag_attr-desc-0-.js
search.desc/bitflags_attr_macros/: bitflags_attr_macros-desc-0-.js
search.desc/syn/: syn-desc-0-.js
src/: example_generated.rs  iter.rs  lib.rs  parser.rs
src/bitflag_attr/: example_generated.rs.html  iter.rs.html  lib.rs.html  parser.rs.html
src/bitflags_attr_macros/: lib.rs.html  typed.rs.html
src/proc_macro2/: detection.rs.html  extra.rs.html  fallback.rs.html  lib.rs.html  marker.rs.html  parse.rs.html  rcvec.rs.html  wrapper.rs.html
src/quote/: ext.rs.html  format.rs.html  ident_fragment.rs.html  lib.rs.html  runtime.rs.html  spanned.rs.html  to_tokens.rs.html
src/syn/: attr.rs.html  bigint.rs.html  buffer.rs.html  classify.rs.html  custom_keyword.rs.html  custom_punctuation.rs.html  data.rs.html  derive.rs.html  discouraged.rs.html  drops.rs.html  error.rs.html  export.rs.html  expr.rs.html  ext.rs.html  file.rs.html  fixup.rs.html  generics.rs.html  group.rs.html  ident.rs.html  item.rs.html  lib.rs.html  lifetime.rs.html  lit.rs.html  lookahead.rs.html  mac.rs.html  macros.rs.html  meta.rs.html  op.rs.html  parse.rs.html  parse_macro_input.rs.html  parse_quote.rs.html  pat.rs.html  path.rs.html  precedence.rs.html  print.rs.html  punctuated.rs.html  restriction.rs.html  sealed.rs.html  span.rs.html  spanned.rs.html  (+6 more)
src/unicode_ident/: lib.rs.html  tables.rs.html
syn/: all.html  enum.AttrStyle.html  enum.BinOp.html  enum.CapturedParam.html  enum.Expr.html  enum.FieldMutability.html  enum.Fields.html  enum.FnArg.html  enum.ForeignItem.html  enum.GenericArgument.html  enum.GenericParam.html  enum.ImplItem.html  enum.ImplRestriction.html  enum.Item.html  enum.Lit.html  enum.MacroDelimiter.html  enum.Member.html  enum.Meta.html  enum.Pat.html  enum.PathArguments.html  enum.PointerMutability.html  enum.RangeLimits.html  enum.ReturnType.html  enum.StaticMutability.html  enum.Stmt.html  enum.TraitBoundModifier.html  enum.TraitItem.html  enum.Type.html  enum.TypeParamBound.html  enum.UnOp.html  enum.UseTree.html  enum.Visibility.html  enum.WherePredicate.html  fn.parse.html  fn.parse2.html  fn.parse_file.html  fn.parse_str.html  index.html  macro.Token.html  macro.braced.html  (+167 more)
syn/buffer/: index.html  struct.Cursor.html  struct.TokenBuffer.html
syn/ext/: index.html  trait.IdentExt.html
syn/meta/: fn.parser.html  index.html  struct.ParseNestedMeta.html
syn/parse/: index.html  struct.End.html  struct.Error.html  struct.Lookahead1.html  struct.Nothing.html  struct.ParseBuffer.html  struct.StepCursor.html  trait.Parse.html  trait.Parser.html  trait.Peek.html  type.ParseStream.html  type.Result.html
syn/punctuated/: enum.Pair.html  index.html  struct.IntoIter.html  struct.IntoPairs.html  struct.Iter.html  struct.IterMut.html  struct.Pairs.html  struct.PairsMut.html  struct.Punctuated.html
syn/spanned/: index.html  trait.Spanned.html
syn/token/: index.html  struct.Abstract.html  struct.And.html  struct.AndAnd.html  struct.AndEq.html  struct.As.html  struct.Async.html  struct.At.html  struct.Auto.html  struct.Await.html  struct.Become.html  struct.Box.html  struct.Brace.html  struct.Bracket.html  struct.Break.html  struct.Caret.html  struct.CaretEq.html  struct.Colon.html  struct.Comma.html  struct.Const.html  struct.Continue.html  struct.Crate.html  struct.Default.html  struct.Do.html  struct.Dollar.html  struct.Dot.html  struct.DotDot.html  struct.DotDotDot.html  struct.DotDotEq.html  struct.Dyn.html  struct.Else.html  struct.Enum.html  struct.Eq.html  struct.EqEq.html  struct.Extern.html  struct.FatArrow.html  struct.Final.html  struct.Fn.html  struct.For.html  struct.Ge.html  (+66 more)
tests/: 00-smoke  01-invalid_type  01-invalid_type.stderr  02-no_value  02-no_value.stderr  03-too_many_args  03-too_many_args.stderr  04-repetitive_args  04-repetitive_args.stderr  05-no_std  06-invalid_repr  06-invalid_repr.stderr  07-invalid_default  07-invalid_default.stderr  08-serde_helper  08-serde_helper.stderr  09-invalid_typekind  09-invalid_typekind.stderr  api.rs  arbitrary.rs  bitflags.rs  bytemuck.rs  progress.rs  serde.rs
tests/bitflags/: all.rs  bitflag_match.rs  bits.rs  complement.rs  contains.rs  difference.rs  empty.rs  flags.rs  fmt.rs  from_bits.rs  from_bits_retain.rs  from_bits_truncate.rs  from_name.rs  insert.rs  intersection.rs  intersects.rs  is_all.rs  is_empty.rs  iter.rs  parser.rs  remove.rs  symmetric_difference.rs  (+3 more)
unicode_ident/: all.html  fn.is_xid_continue.html  fn.is_xid_start.html  index.html
(+44 files in other folders)
