[package]
name = "bitflag-attr"
authors = ["GrayJack <gr41.j4ck@gmail.com>"]
version = "0.11.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A macro to generate bitflags structures from C-like enums"
keywords = ["bit", "bitmask", "bitflags", "flags"]
categories = ["no-std"]
repository = "https://github.com/GrayJack/bitflag-attr"
homepage = "https://github.com/GrayJack/bitflag-attr"
rust-version = "1.81.0"
exclude = ["/tests", "/.github"]

[dependencies]
bitflags-attr-macros = { version = "=0.11.0", path = "bitflags-attr-macros" }

[dev-dependencies]
trybuild = "1.0"
serde = { version = "1.0", features = ["serde_derive"] }
arbitrary = "1.0"
bytemuck = "1.0"
serde_json = "1.0"
serde_test = "1.0.19"

[features]
default = []
# Just to satisfy
std = []
# Use string for more information for parse errors.
alloc = []
# Implement `Serialize` and `Deserialize` for the type with the bitflag attribute.
# This do not add `serde` in your dependency tree
serde = ["bitflags-attr-macros/serde"]
# Implement `Arbitrary` for the type with the bitflag attribute.
# This do not add `arbitrary` in your dependency tree
arbitrary = ["bitflags-attr-macros/arbitrary"]
# Implement `Pod` and `Zeroable` for the type with the bitflag attribute.
# This do not add `bytemuck` in your dependency tree
bytemuck = ["bitflags-attr-macros/bytemuck"]
# Allows to use custom types as parameter for the bitflags macro.
custom-types = ["bitflags-attr-macros/custom-types"]
# Generate as const functions some functions that take `&mut` (Only stable on rust 1.83.0: release date: 28 November, 2024)
const-mut-ref = ["bitflags-attr-macros/const-mut-ref"]

[workspace]
members = ["bitflags-attr-macros"]

[[test]]
name = "tests"
path = "tests/progress.rs"

[[test]]
name = "generated_api_tests"
path = "tests/api.rs"

[[test]]
name = "bitflags_imported_tests"
path = "tests/bitflags.rs"

[[test]]
name = "serde_tests"
path = "tests/serde.rs"
required-features = ["serde"]

[[test]]
name = "arbitrary_tests"
path = "tests/arbitrary.rs"
required-features = ["arbitrary"]

[[test]]
name = "bytemuck_tests"
path = "tests/bytemuck.rs"
required-features = ["bytemuck"]

[[example]]
name = "serde"
required-features = ["serde"]
